# caesr

./: .gitignore  README.md  deck.csv  pyproject.toml  test_deck.csv
csr/: __main__.py  auto_aliasing.py  config.py  deck.py  quiz.py  styles.py
csr/tests/: test_deck.py
src/: config.py  deck.py  main.py  quiz.py
src/srs/: __main__.py  deck.py  quiz.py  utils.py
srs/: config.py
