[tool.poetry]
name = "srs"
version = "0.1.0"
description = "A conceptual spaced repetition system using langchain and click"
authors = ["Sam McVicker <sammcvicker@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


supermemo2 = "^3.0.1"
toml = "^0.10.2"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
srs = "src.main:cli"
