[tool.poetry]
name = "csr"
version = "0.1.4"
description = "CSR is a Conceptual Spaced Repetition CLI"
authors = ["Sam McVicker <sammcvicker@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "csr" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
supermemo2 = "^3.0.1"
toml = "^0.10.2"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.1"
langchain-openai = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csr = "csr.__main__:cli"
